# ising_model

./: classes.py  helpers.py  lattice.py  pyproject.toml
